--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
 
   <!-- Contact Section -->
   <!-- <section id="contactUs">
-    <app-></app->
+    <app-footer></app-footer>
   </section> -->
 </main>
 
