--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -66,7 +66,7 @@
                     <img src="assets/img/about.png" alt="" style="width:90%;">
                 </span>
             </div>
-            <div class="container my-5 mx-auto "
+            <div class="container about-list my-5 mx-auto "
             style="width: 85%;">
                 <ul>
                     <li><i class="fa fa-check"></i> Highly skilled and experienced professionals</li>
