--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,8 +14,9 @@
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div #navbarCollapse  class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
+            <button class="close-btn d-lg-none" id="closeMenu">×</button>
           <li class="nav-item"><a class="nav-link" href="#home" >Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#about" >About</a></li>
           <li class="nav-item"><a class="nav-link" href="#services" >Services</a></li>
