--- a/src/app/components/testemonials/testemonials.component.html
+++ b/src/app/components/testemonials/testemonials.component.html
@@ -19,10 +19,10 @@
                                 Effica's dedication to creating impactful landing pages has proven to be invaluable,
                                 providing our website with a distinct edge and unparalleled user engagement.
                             </p>
-                            <div class="mt-5 mb-4 d-flex flex-row align-items-center">
+                            <div class="mt-4 mb-4 d-flex flex-row align-items-center">
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(2).webp"
                               class="rounded-circle img-fluid shadow-1-strong" width="100" height="100" />
-                                <div class="d-flex flex-column ml-3">
+                                <div class="d-flex flex-column test-m ml-3">
                                     <p class="text-muted">- Anna Morian</p>
                                     <p>Marketing Director at Lumos Inc.</p>
                                 </div>
@@ -39,11 +39,11 @@
                                 Effica's dedication to creating impactful landing pages has proven to be invaluable,
                                 providing our website with a distinct edge and unparalleled user engagement.
                             </p>
-                            <div class="mt-5 mb-4 d-flex flex-row align-items-center">
+                            <div class="mt-4 mb-4 d-flex flex-row align-items-center">
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(31).webp"
                                 class="rounded-circle img-fluid shadow-1-strong" alt="smaple image" width="100"
                                 height="100" />
-                                <div class="d-flex flex-column ml-3">
+                                <div class="d-flex flex-column test-m ml-3">
                                     <p class="text-muted">- Anna Morian</p>
                                     <p>Marketing Director at Lumos Inc.</p>
                                 </div>
@@ -60,11 +60,11 @@
                                 Effica's dedication to creating impactful landing pages has proven to be invaluable,
                                 providing our website with a distinct edge and unparalleled user engagement.
                             </p>
-                            <div class="mt-5 mb-4 d-flex flex-row align-items-center">
+                            <div class="mt-4 mb-4 d-flex flex-row align-items-center">
                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(10).webp"
                                 class="rounded-circle img-fluid shadow-1-strong" alt="smaple image" width="80"
                                 height="80" />
-                                <div class="d-flex flex-column ml-3">
+                                <div class="d-flex flex-column test-m ml-3">
                                     <p class="text-muted">- Anna Morian</p>
                                     <p>Marketing Director at Lumos Inc.</p>
                                 </div>
