--- a/src/app/components/logos/logos.component.html
+++ b/src/app/components/logos/logos.component.html
@@ -1,1 +1,34 @@
-<p>logos works!</p>
+<!-- about -->
+<div class="about video-container" id="about">
+    <video autoplay muted loop playsinline>
+        <source src="assets/videos/file2.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="content my-5" >
+                    <div class="title-section-left text-center mt-5 ">
+                        <!-- look bottom -->
+                        <h3 class="about-h3" >Know More <span>About Us</span></h3>
+                        <!-- <h6>We are professionals</h6> -->
+                    </div>
+  <!-- look bottom -->
+                    <p class="about-p " >At <strong>EfficaTech</strong>, we are passionate about bringing innovative digital solutions to life.
+                        With a talented team of professionals, we specialize in transforming ideas into high-impact,
+                        tangible outcomes. 
+                    </p> 
+                </div>
+            </div>
+            
+
+            <div class="container2 d-flex flex-row align-items-center">
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+                <div><img src="" alt=""></div>
+            </div>      
+        </div>
+    </div>
+</div>
+<!-- end about -->
