--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -69,12 +69,12 @@
                 experiences and drive business growth.
                 </p>
                 <span>
-                    <img  src="assets/img/image (5).png" alt=""><p>Performance-driven Approach</p>
-                    <img  src="assets/img/image (5).png" alt=""><p>Dynamic Resource Management</p>
+                    <img class="icon" src="assets/img/image (5).png" alt=""><p>Performance-driven Approach</p>
+                    <img class="icon" src="assets/img/image (5).png" alt=""><p>Dynamic Resource Management</p>
                 </span>
                 <span >
-                    <img  src="assets/img/image (5).png" alt=""><p>Performance-driven Approach</p>
-                    <img  src="assets/img/image (5).png" alt=""><p>Dynamic Resource Management</p>
+                    <img class="icon" src="assets/img/image (5).png" alt=""><p>Performance-driven Approach</p>
+                    <img class="icon" src="assets/img/image (5).png" alt=""><p>Dynamic Resource Management</p>
                 </span>
                 </div>
             </div>
